[feat]: [CDS-34869]: Add init support for exec ssh task (#31607)
* [feat]: [CDS-34869]: Add init support for exec ssh task

* [feat]: [CDS-34869]: added UT

* [feat]: [CDS-34869]: fixed hashcode

* [feat]: [CDS-34869]: fixed commandUnit log issues

* [feat]: [CDS-34869]: implemented onDelegate and adjusted review notes

* [feat]: [CDS-34869]: fixed review notes

* [feat]: [CDS-34869]: fixed review notes

* [feat]: [CDS-34869]: fixed pipiline issues

--- a/930-delegate-tasks/BUILD.bazel
+++ b/930-delegate-tasks/BUILD.bazel
@@ -56,6 +56,7 @@ java_library(
         "@maven//:io_netty_netty_all",
         "@maven//:org_apache_commons_commons_email",
         "@maven//:org_jooq_joor",
+        "@maven//:io_dropwizard_dropwizard_views_freemarker",
         "@maven//:xerces_xercesImpl",
     ],
 )
