--- a/890-sm-core/BUILD.bazel
+++ b/890-sm-core/BUILD.bazel
@@ -114,6 +114,7 @@ java_library(
         "@maven//:org_apache_commons_commons_lang3",
         "@maven//:org_assertj_assertj_core",
         "@maven//:org_mockito_mockito_core",
+        "@maven//:org_mockito_mockito_inline",
         "@maven//:org_mongodb_morphia_morphia",
         "@maven//:org_powermock_powermock_api_mockito2",
         "@maven//:org_powermock_powermock_core",
