[DEL-4019]: Fixing JRE version number to match what's returned by java.version system property

--- a/360-cg-manager/config.yml
+++ b/360-cg-manager/config.yml
@@ -586,7 +586,7 @@ jreConfigs:
     jreTarPath: jre/openjdk-8u242/jre_x64_${OS}_8u242b08.tar.gz
     alpnJarPath: tools/alpn/release/8.1.13.v20181017/alpn-boot-8.1.13.v20181017.jar
   openjdk11014_9:
-    version: 11.0.14_9
+    version: 11.0.14
     jreDirectory: jdk-11.0.14+9-jre
     jreMacDirectory: jdk-11.0.14+9-jre
     jreTarPath: jre/openjdk-11.0.14_9/OpenJDK11U-jre_x64_${OS}_hotspot_11.0.14_9.tar.gz
