--- a/930-delegate-tasks/BUILD.bazel
+++ b/930-delegate-tasks/BUILD.bazel
@@ -36,6 +36,8 @@ java_library(
         "//970-ng-commons:module",
         "//980-commons:module",
         "//999-annotations:module",
+        "//platform-service/modules/notification-service/contracts:module",
+        "//platform-service/modules/notification-service/delegate-tasks:module",
         "//product/ci/engine/proto:ciengine_java_proto",
         "//product/ci/scm/proto:ciscm_java_proto",
         "@maven//:com_amazonaws_aws_java_sdk_applicationautoscaling",
