--- a/330-ci-beans/BUILD.bazel
+++ b/330-ci-beans/BUILD.bazel
@@ -3,10 +3,10 @@ load("//:tools/bazel/GenTestRules.bzl", "run_tests")
 load("//:tools/bazel/macros.bzl", "run_analysis")
 
 shared_dependencies = [
-    "//860-orchestration-steps:module",  # This needs to be removed from here
     "//878-ng-common-utilities:module",
     "//879-pms-sdk:module",
     "//930-delegate-tasks:module",
+    "//945-account-mgmt:module",
     "//960-persistence:module",
     "//999-annotations:module",
     "//product/ci/engine/proto:ciengine_java_proto",
