[techDebt]: [DEL-4027]: Move MailSenderDelegateTask and related classes to 930-delegate-tasks

--- a/930-delegate-tasks/BUILD.bazel
+++ b/930-delegate-tasks/BUILD.bazel
@@ -36,8 +36,6 @@ java_library(
         "//970-ng-commons:module",
         "//980-commons:module",
         "//999-annotations:module",
-        "//platform-service/modules/notification-service/contracts:module",
-        "//platform-service/modules/notification-service/delegate-tasks:module",
         "//product/ci/engine/proto:ciengine_java_proto",
         "//product/ci/scm/proto:ciscm_java_proto",
         "@maven//:com_amazonaws_aws_java_sdk_applicationautoscaling",
@@ -106,6 +104,7 @@ java_library(
         "@maven//:org_cloudfoundry_cloudfoundry_operations",
         "@maven//:org_eclipse_jgit_org_eclipse_jgit",
         "@maven//:org_eclipse_jgit_org_eclipse_jgit_ssh_jsch",
+        "@maven//:com_github_dikhan_pagerduty_client",
         "@maven//:org_hibernate_hibernate_validator",
         "@maven//:org_jetbrains_annotations",
         "@maven//:org_jooq_joor",
