--- a/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
+++ b/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
@@ -7,6 +7,7 @@ proto_library(
     srcs = [
         "perpetual_task_execution.proto",
         "perpetual_task_service.proto",
+        "NotificationRequest.proto"
     ],
     visibility = ["//visibility:public"],
     deps = [
