--- a/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
+++ b/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
@@ -5,9 +5,9 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "930_delegate_tasks_proto",
     srcs = [
+        "NotificationRequest.proto",
         "perpetual_task_execution.proto",
         "perpetual_task_service.proto",
-        "NotificationRequest.proto"
     ],
     visibility = ["//visibility:public"],
     deps = [
