--- a/dockerization/pipeline-service/Dockerfile-pipeline-service-jenkins-k8-gcr-openjdk-ubi
+++ b/dockerization/pipeline-service/Dockerfile-pipeline-service-jenkins-k8-gcr-openjdk-ubi
@@ -1,9 +1,10 @@
 # to be used when building in Jenkins
-FROM redhat/ubi8-minimal:8.4
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5-218
 
-RUN microdnf update && microdnf install procps
-
-RUN microdnf install wget
+RUN microdnf update \
+ && microdnf install wget shadow-utils \
+ && rm -rf /var/cache/yum \
+ && microdnf clean all
 
 # Add the capsule JAR and config.yml
 COPY pipeline-service-capsule.jar config.yml classpath_metadata.json alpn-boot-8.1.13.v20181017.jar redisson-jcache.yaml pipeline-service-protocol.info /opt/harness/
@@ -17,5 +18,16 @@ RUN chmod +x /opt/harness/*.sh
 RUN mkdir /opt/harness/plugins
 
 WORKDIR /opt/harness
+
+RUN groupadd harness
+RUN adduser -g harness -s /bin/bash -u 1001 harness
+
+RUN chmod -R 755 /opt/harness \
+    && chgrp -R 0 /opt/harness  \
+    && chmod -R g=u /opt/harness \
+    && chown -R 1001 /opt/harness
+
+USER harness:harness
+COPY --chown=1001 --from=adoptopenjdk/openjdk8:jre8u242-b08-ubi-minimal /opt/java/openjdk/ ./jdk8u242-b08-jre/
 
 CMD [ "./run.sh" ]
