fix: [DEL-4056] Make Redis as default cache for PR and Local env in manager

--- a/360-cg-manager/config.yml
+++ b/360-cg-manager/config.yml
@@ -363,7 +363,7 @@ totp:
     durationUnit: MINUTES
 
 cacheConfig:
-  cacheBackend: HAZELCAST
+  cacheBackend: REDIS
   cacheNamespace: ""
   disabledCaches: []
 
