--- a/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
+++ b/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
@@ -1,17 +1,13 @@
 # to be used when building in Jenkins
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM harness/ubi:safe-ubi8.5
 
 # Add the capsule JAR and config.yml
-COPY cv-nextgen-capsule.jar keystore.jks cv-nextgen-config.yml redisson-jcache.yaml /opt/harness/
+COPY --chown=65534:65534 cv-nextgen-capsule.jar /opt/harness/
+COPY --chown=65534:65534 keystore.jks /opt/harness/
+COPY --chown=65534:65534 cv-nextgen-config.yml /opt/harness/
+COPY --chown=65534:65534 redisson-jcache.yaml /opt/harness/
+COPY --chown=65534:65534 scripts /opt/harness/
 
-RUN wget https://github.com/mikefarah/yq/releases/download/3.3.2/yq_linux_amd64 -O /usr/bin/yq -O /usr/bin/yq
-RUN chmod +x /usr/bin/yq
-
-COPY scripts /opt/harness
-
-RUN chmod +x /opt/harness/*.sh
-RUN mkdir -p /opt/harness/plugins
-
-WORKDIR /opt/harness
+RUN chmod 500 /opt/harness/*.sh
 
 CMD [ "./run.sh" ]
