--- a/dockerization/manager/Dockerfile-manager-jenkins-k8-openjdk
+++ b/dockerization/manager/Dockerfile-manager-jenkins-k8-openjdk
@@ -1,6 +1,5 @@
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM harness/ubi:safe-ubi8.5
 
-COPY --chown=65534:65534 alpn-boot-8.1.13.v20181017.jar /opt/harness/
 COPY --chown=65534:65534 keystore.jks /opt/harness/
 COPY --chown=65534:65534 newrelic.yml /opt/harness/
 COPY --chown=65534:65534 hazelcast.xml /opt/harness/
