--- a/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
+++ b/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
@@ -1,5 +1,5 @@
 # to be used when building in Jenkins
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276
 
 # Add the capsule JAR and config.yml
 COPY cv-nextgen-capsule.jar keystore.jks cv-nextgen-config.yml redisson-jcache.yaml /opt/harness/
