--- a/dockerization/eventsapi-monitor/Dockerfile-eventsapi-monitor-jenkins-k8-gcr-openjdk
+++ b/dockerization/eventsapi-monitor/Dockerfile-eventsapi-monitor-jenkins-k8-gcr-openjdk
@@ -1,5 +1,5 @@
 # to be used when building in Jenkins
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM harness/alpine:safe-alpine3.15.4-bt1276-apm
 
 # Add the capsule JAR and other files
 COPY eventsapi-monitor-capsule.jar config.yml redislabs_ca.pem install_redis.sh protocol.info /opt/harness/
