--- a/dockerization/manager/Dockerfile-manager-jenkins-k8-gcr
+++ b/dockerization/manager/Dockerfile-manager-jenkins-k8-gcr
@@ -1,5 +1,5 @@
 # to be used when building in Jenkins
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM harness/alpine:safe-alpine3.15.4-bt1276-apm
 RUN yum install -y hostname tar gzip net-tools traceroute nmap procps
 
 # install yq - a YAML query command line tool
