--- a/dockerization/ng-dashboard-service/Dockerfile-ng-dashboard-k8-openjdk
+++ b/dockerization/ng-dashboard-service/Dockerfile-ng-dashboard-k8-openjdk
@@ -1,4 +1,4 @@
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276
 
 # Add the capsule JAR and config.yml
 COPY ng-dashboard-service.jar config.yml  /opt/harness/
