--- a/dockerization/safe_image/dockerfile-alpine-safe
+++ b/dockerization/safe_image/dockerfile-alpine-safe
@@ -1,5 +1,5 @@
 # Filename:  Dockerfile
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.12-jdk11
+FROM harness/alpine:safe-alpine3.12-sec1338
 CMD ["/bin/sh"]
 
 #add new package postgresql-client [OPS-2813]
