--- a/dockerization/ci-manager/Dockerfile-ci-manager-jenkins-k8-gcr-openjdk
+++ b/dockerization/ci-manager/Dockerfile-ci-manager-jenkins-k8-gcr-openjdk
@@ -1,5 +1,5 @@
 # to be used when building in Jenkins
-FROM harness/alpine:safe-alpine3.15.4-bt1276-apm
+FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276-apm
 
 # Add the capsule JAR and ci-manager-config.yml
 COPY ci-manager-capsule.jar keystore.jks ci-manager-config.yml redisson-jcache.yaml ci-manager-protocol.info /opt/harness/
