--- a/dockerization/event-server/Dockerfile-event-server-jenkins-k8-gcr-openjdk
+++ b/dockerization/event-server/Dockerfile-event-server-jenkins-k8-gcr-openjdk
@@ -1,5 +1,5 @@
 # to be used when building in Jenkins
-FROM harness/alpine:safe-alpine3.15.4-bt1276-apm
+FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276-apm
 
 # Add the capsule JAR and config.yml
 COPY event-server-capsule.jar event-service-config.yml key.pem cert.pem protocol.info /opt/harness/
