--- a/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
+++ b/dockerization/cv-nextgen/Dockerfile-verification-jenkins-k8-openjdk
@@ -1,6 +1,15 @@
 # to be used when building in Jenkins
 FROM harness/ubi:safe-ubi8.5
 
+USER root
+RUN microdnf install -y wget \
+  	&& microdnf  clean all \
+  	&& rm -rf /var/cache/yum
+ 
+RUN wget https://github.com/mikefarah/yq/releases/download/3.3.2/yq_linux_amd64 -O /usr/bin/yq -O /usr/bin/yq
+RUN chmod +x /usr/bin/yq
+USER nobody
+
 # Add the capsule JAR and config.yml
 COPY --chown=65534:65534 cv-nextgen-capsule.jar /opt/harness/
 COPY --chown=65534:65534 keystore.jks /opt/harness/
