reverting back to yq 3.3.2

--- a/dockerization/safe_image/Dockerfile-onprem
+++ b/dockerization/safe_image/Dockerfile-onprem
@@ -1,28 +1,19 @@
-FROM adoptopenjdk/openjdk8:x86_64-alpine-jdk8u242-b08
-
-# replace insecure repositories with TLS repo
-RUN sed -i 's|http://dl-cdn.alpinelinux.org|https://alpine.global.ssl.fastly.net|g' /etc/apk/repositories
-
-# update vulnerable package
-RUN set -x \
-    && apk update --no-cache \
-    && apk upgrade --no-cache \
-# install bash for scripting
-    && apk add --no-cache bash
-
-# install yq for yaml editing scripts
-RUN set -x \
-    && wget https://github.com/mikefarah/yq/releases/download/3.3.2/yq_linux_amd64 -O /usr/bin/yq \
-    && chmod +x /usr/bin/yq
-
-# create application user and working directory
-RUN set -x \
-    && addgroup -S 65534 \
-    && adduser -S 65534 -G 65534 \
-    && mkdir -p /opt/harness/plugins \
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
+RUN microdnf --setopt=install_weak_deps=0 --setopt=tsflags=nodocs install -y java-11-openjdk-devel \
+            && microdnf --setopt=install_weak_deps=0 --setopt=tsflags=nodocs install -y shadow-utils \
+            && microdnf install wget \
+            && microdnf update -y \
+            && microdnf clean all \
+            && rpm -q java-11-openjdk-devel shadow-utils \
+            && wget https://github.com/mikefarah/yq/releases/download/3.3.2/yq_linux_amd64 -O /usr/bin/yq \
+            && chmod +x /usr/bin/yq \
+            && microdnf remove wget
+ENV \
+            JAVA_HOME=“/usr/lib/jvm/java-11” \
+            JAVA_VENDOR=“openjdk” \
+            JAVA_VERSION=“11”
+RUN mkdir -p /opt/harness/plugins \
     && chown -R 65534:65534 /opt/harness \
     && chmod -R 700 /opt/harness
-
 WORKDIR /opt/harness
-
 USER 65534
