--- a/930-delegate-tasks/src/main/proto/io/harness/notification/BUILD.bazel
+++ b/930-delegate-tasks/src/main/proto/io/harness/notification/BUILD.bazel
@@ -5,13 +5,10 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "930_delegate_tasks_proto",
     srcs = [
-        "perpetual_task_execution.proto",
-        "perpetual_task_service.proto",
+        "NotificationRequest.proto"
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "//955-delegate-beans/src/main/proto/io/harness/delegate:955_delegate_beans_proto",
-        "//955-delegate-beans/src/main/proto/io/harness/perpetualtask:955_delegate_beans_proto",
         "@com_google_protobuf//:any_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
@@ -20,18 +17,14 @@ proto_library(
 go_proto_library(
     name = "930_delegate_tasks_go_proto",
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
-    importpath = "github.com/harness/harness-core/930-delegate-tasks/src/main/proto/io/harness/perpetualtask",
+    importpath = "github.com/harness/harness-core/930-delegate-tasks/src/main/proto/io/harness/notification",
     proto = ":930_delegate_tasks_proto",
     visibility = ["//visibility:public"],
-    deps = [
-        "//955-delegate-beans/src/main/proto/io/harness/delegate",
-        "//955-delegate-beans/src/main/proto/io/harness/perpetualtask",
-    ],
 )
 
 go_library(
     name = "perpetualtask",
     embed = [":930_delegate_tasks_go_proto"],
-    importpath = "github.com/harness/harness-core/930-delegate-tasks/src/main/proto/io/harness/perpetualtask",
+    importpath = "github.com/harness/harness-core/930-delegate-tasks/src/main/proto/io/harness/notification",
     visibility = ["//visibility:public"],
 )
