feat: [CCM-7328]: Updated the k8s connector yaml for k8s AutoSopping

--- a/340-ce-nextgen/src/test/resources/yaml/visibility-and-optimization.yaml
+++ b/340-ce-nextgen/src/test/resources/yaml/visibility-and-optimization.yaml
@@ -287,6 +287,7 @@ data:
       - name: harness_api_endpoint
         connect_timeout: 0.25s
         type: LOGICAL_DNS
+        dns_lookup_family: V4_ONLY
         lb_policy: ROUND_ROBIN
         load_assignment:
           cluster_name: harness_api_endpoint
@@ -385,7 +386,7 @@ spec:
     spec:
       containers:
       - name: autostopping-controller
-        image: harness/autostopping-controller:1.0.0
+        image: harness/autostopping-controller:1.0.3
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
@@ -469,3 +470,14 @@ subjects:
   - kind: ServiceAccount
     name: harness-autostopping-sa
     namespace: harness-autostopping
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: harness-autostopping-enforcement
+data:
+  is_active: false
+  dry_run: enabled
+  excluded_namespaces: '[]'
+  notifications_enabled: false
+  notifications_usergroups: '[]'
