Revert "fix compilation error"
This reverts commit 1b0cd492189152a2afd5c1ef513c9760aa58a000.

--- a/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
+++ b/930-delegate-tasks/src/main/proto/io/harness/perpetualtask/BUILD.bazel
@@ -5,6 +5,7 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "930_delegate_tasks_proto",
     srcs = [
+        "NotificationRequest.proto",
         "perpetual_task_execution.proto",
         "perpetual_task_service.proto",
     ],
