--- a/platform-service/modules/notification-service/contracts/BUILD.bazel
+++ b/platform-service/modules/notification-service/contracts/BUILD.bazel
@@ -11,7 +11,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//:lombok",
-        "//930-delegate-tasks:module",
+        "//950-delegate-tasks-beans:module",
         "//960-ng-core-beans:module",
         "//960-persistence:module",
         "//970-api-services-beans:module",
