--- a/260-delegate/BUILD.bazel
+++ b/260-delegate/BUILD.bazel
@@ -19,7 +19,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//:lombok",
-        "//400-rest:module",
+#        "//400-rest:module",
         "//420-delegate-agent:module",
         "//420-delegate-service:module",
         "//430-cv-nextgen-commons:module",
