--- a/930-delegate-tasks/BUILD.bazel
+++ b/930-delegate-tasks/BUILD.bazel
@@ -113,6 +113,7 @@ java_library(
         "@maven//:org_slf4j_slf4j_api",
         "@maven//:org_zeroturnaround_zt_exec",
         "@maven//:xerces_xercesImpl",
+        "@maven//:javax_javaee_api",
     ],
 )
 
