--- a/platform-service/modules/notification-service/BUILD.bazel
+++ b/platform-service/modules/notification-service/BUILD.bazel
@@ -16,6 +16,8 @@ java_library(
     ],
     deps = [
         "//:lombok",
+        "//940-secret-manager-client:module",
+        "//440-connector-nextgen:module",
         "//890-sm-core:module",
         "//910-delegate-service-driver:module",
         "//920-delegate-service-beans:module",
