--- a/950-ng-core/BUILD.bazel
+++ b/950-ng-core/BUILD.bazel
@@ -16,6 +16,7 @@ java_library(
         "//954-connector-beans:module",
         "//955-outbox-sdk:module",
         "//955-setup-usage-sdk:module",
+        "//959-file-service-commons:module",
         "//960-ng-core-beans:module",
         "//960-persistence:module",
         "//970-ng-commons:module",
@@ -60,6 +61,7 @@ java_library(
         "//953-events-api:module",
         "//955-outbox-sdk:module",
         "//955-setup-usage-sdk:module",
+        "//959-file-service-commons:module",
         "//960-ng-core-beans:module",
         "//960-persistence:module",
         "//960-persistence:supporter-test",
