Added chaos workflow ACL roles/permissions
Signed-off-by: Amit Kumar Das <amit@chaosnative.com>

--- a/access-control/service/src/main/resources/io/harness/accesscontrol/permissions/permissions.yml
+++ b/access-control/service/src/main/resources/io/harness/accesscontrol/permissions/permissions.yml
@@ -1,6 +1,6 @@
 # Any edit in this file should accompany an increment in version.
 name: permissionsConfiguration
-version: 24
+version: 25
 permissions:
   - identifier: core_project_delete
     name: Delete Project
@@ -933,6 +933,30 @@ permissions:
     name: Delete a Chaos Hub
     status: ACTIVE
     includeInAllRoles: false
+    allowedScopeLevels:
+      - account
+      - organization
+      - project
+  - identifier: chaos_chaosworkflow_view
+    name: View a Chaos Workflow
+    status: ACTIVE
+    includedInAllRoles: false
+    allowedScopeLevels:
+      - account
+      - organization
+      - project
+  - identifier: chaos_chaosworkflow_edit
+    name: Edit a Chaos Workflow
+    status: ACTIVE
+    includedInAllRoles: false
+    allowedScopeLevels:
+      - account
+      - organization
+      - project
+  - identifier: chaos_chaosworkflow_delete
+    name: Delete a Chaos Workflow
+    status: ACTIVE
+    includedInAllRoles: false
     allowedScopeLevels:
       - account
       - organization
