[CCM-7678]: Published messages bulk write events

--- a/350-event-server/event-service-config.yml
+++ b/350-event-server/event-service-config.yml
@@ -23,3 +23,8 @@ events-mongo:
 secretsConfiguration:
   secretResolutionEnabled: false
   gcpSecretManagerProject: ccm-play
+
+batchQueryConfig:
+  queryBatchSize: 4000
+  instanceDataBatchSize: 5000
+  syncJobDisabled: false
