--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -35,10 +35,20 @@ filegroup(
 ## gazelle:proto_strip_import_prefix /proto/harness.io/
 
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
-load("@bazel_gazelle//:def.bzl", "gazelle")
+load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
 
 # gazelle:prefix github.com/harness/harness-core
-gazelle(name = "gazelle")
+gazelle(
+	name = "gazelle", 
+    gazelle = ":gazelle_bin",
+)
+
+gazelle_binary(
+    name = "gazelle_bin",
+    languages = DEFAULT_LANGUAGES + [
+        "@contrib_rules_jvm//java/gazelle",
+    ],
+)
 
 load("@io_bazel_rules_go//go:def.bzl", "go_path", "nogo")
 
