--- a/400-rest/BUILD.bazel
+++ b/400-rest/BUILD.bazel
@@ -692,6 +692,7 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
+        "@maven//:javax_javaee_api",
     ],
 )
 
