--- a/product/ci/addon/tasks/BUILD.bazel
+++ b/product/ci/addon/tasks/BUILD.bazel
@@ -30,6 +30,7 @@ go_library(
         "//product/ci/engine/grpc/client",
         "//product/ci/engine/proto",
         "//product/ci/ti-service/types",
+        "//product/ci/ti-service/client",
         "@com_github_ghodss_yaml//:yaml",
         "@com_github_grpc_ecosystem_go_grpc_middleware//retry",
         "@com_github_pkg_errors//:errors",
