--- a/400-rest/src/test/resources/expectedNgHelmDelegateValues.yaml
+++ b/400-rest/src/test/resources/expectedNgHelmDelegateValues.yaml
@@ -1,3 +1,15 @@
+# This harness-delegate-values.yaml file is compatible with version 1.0.2
+# of the harness-delegate helm chart.
+
+# You can download the harness-delegate helm chart at
+# https://app.harness.io/storage/harness-download/harness-helm-charts/
+
+# To add Harness helm repo with name harness:
+# helm repo add harness https://app.harness.io/storage/harness-download/harness-helm-charts/
+
+# To install the chart with the release name my-release and this values.yaml
+# helm install --name my-release harness/harness-delegate -f harness-delegate-values.yaml
+
 # Account Id to which the delegate will be connecting
 accountId: ACCOUNT_ID
 
@@ -12,13 +24,18 @@ delegateDockerImage: harness/delegate:latest
 managerHostAndPort: https://localhost:9090
 
 nextGen: true
-delegateTags:
-delegateDescription:
+delegateTags: ""
+delegateDescription: ""
 k8sPermissionsType: CLUSTER_ADMIN
+namespace: harness-delegate-ng
+
 delegateReplicas: 1
 delegateCpu: 0.5
 delegateRam: 2048
-delegateNamespace: harness-delegate-ng
+
+enableCE: false
+
+initScript: ""
 
 watcherStorageUrl: http://localhost:8888
 watcherCheckLocation: watcherci.txt
