techdebt : [SPG-107]: fix jdk11 build on linux - add javax_javaee_api to 400-rest (#33416)
* techdebt : [SPG-107]: fix jdk11 build on linux - add javax_javaee_api to 400-rest

* techdebt : [SPG-107]: fix jdk11 build on linux - add javax_javaee_api to 400-rest

--- a/400-rest/BUILD.bazel
+++ b/400-rest/BUILD.bazel
@@ -1392,6 +1392,7 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
+        "@maven//:javax_javaee_api",
     ],
 )
 
@@ -2767,6 +2768,7 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
+        "@maven//:javax_javaee_api",
     ],
 )
 
