--- a/360-cg-manager/config.yml
+++ b/360-cg-manager/config.yml
@@ -590,9 +590,9 @@ cdnConfig:
   url: https://qa.harness.io
   keyName: storage-qa-private
   keySecret: cdnSignedUrlKey
-  delegateJarPath: private/shared/delegates/builds/oracle-8u191/%s/delegate.jar
+  delegateJarPath: private/shared/delegates/builds/openjdk-8u242/%s/delegate.jar
   watcherJarBasePath: public/shared/watchers/builds
-  watcherJarPath: oracle-8u191/%s/watcher.jar
+  watcherJarPath: openjdk-8u242/%s/watcher.jar
   watcherMetaDataFilePath: public/%s/%s/watchers/current.version
   alpnJarPath: public/shared/tools/alpn/release/8.1.13.v20181017/alpn-boot-8.1.13.v20181017.jar
   cdnJreTarPaths:
