--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 build.majorVersion=1
 build.minorVersion=0
-build.number=75271
+build.number=75272
 build.patch=000
 delegate.version=22.05.11
-delegate.patch=000git 
+delegate.patch=000
