techdebt : [SPG-107]: fix jdk11 build on linux - add deps to 400-rest

--- a/400-rest/BUILD.bazel
+++ b/400-rest/BUILD.bazel
@@ -38,6 +38,7 @@ java_library(
         "//920-delegate-service-beans:module",
         "//930-delegate-tasks:module",
         "//930-ng-core-clients:module",
+        "//932-connector-task:module",
         "//940-feature-flag:module",
         "//940-secret-manager-client:module",
         "//947-scim-core:module",
@@ -47,6 +48,7 @@ java_library(
         "//950-ng-authentication-service:module",
         "//950-ng-core:module",
         "//950-ng-project-n-orgs:module",
+        "//950-ng-signup-beans:module",
         "//950-telemetry:module",
         "//950-wait-engine:module",
         "//952-remote-observers:module",
@@ -71,9 +73,11 @@ java_library(
         "//970-grpc:module",
         "//970-ng-commons:module",
         "//970-rbac-core:module",
+        "//970-telemetry-beans:module",
         "//970-watcher-beans:module",
         "//980-commons:module",
         "//999-annotations:module",
+        "//access-control/contracts:module",
         "//clients/access-control/admin-client:module",
         "//clients/access-control/sdk:module",
         "//clients/audit:module",
@@ -434,6 +438,7 @@ java_library(
         "@maven//:javax_annotation_javax_annotation_api",
         "@maven//:javax_cache_cache_api",
         "@maven//:javax_inject_javax_inject",
+        "@maven//:javax_javaee_api",
         "@maven//:javax_servlet_javax_servlet_api",
         "@maven//:javax_validation_validation_api",
         "@maven//:javax_ws_rs_javax_ws_rs_api",
@@ -692,7 +697,6 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
-        "@maven//:javax_javaee_api",
     ],
 )
 
@@ -735,9 +739,12 @@ java_library(
         "//950-command-library-common:module",
         "//950-delegate-tasks-beans:module",
         "//950-events-framework:module",
+        "//950-ng-authentication-service:module",
         "//950-ng-core:module",
         "//950-ng-project-n-orgs:module",
+        "//950-telemetry:module",
         "//950-wait-engine:module",
+        "//952-remote-observers:module",
         "//953-events-api:module",
         "//954-connector-beans:module",
         "//955-alert-beans:module",
@@ -1124,6 +1131,7 @@ java_library(
         "@maven//:javax_annotation_javax_annotation_api",
         "@maven//:javax_cache_cache_api",
         "@maven//:javax_inject_javax_inject",
+        "@maven//:javax_javaee_api",
         "@maven//:javax_servlet_javax_servlet_api",
         "@maven//:javax_validation_validation_api",
         "@maven//:javax_ws_rs_javax_ws_rs_api",
@@ -1392,7 +1400,6 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
-        "@maven//:javax_javaee_api",
     ],
 )
 
@@ -2502,6 +2509,7 @@ java_library(
         "@maven//:javax_annotation_javax_annotation_api",
         "@maven//:javax_cache_cache_api",
         "@maven//:javax_inject_javax_inject",
+        "@maven//:javax_javaee_api",
         "@maven//:javax_servlet_javax_servlet_api",
         "@maven//:javax_validation_validation_api",
         "@maven//:javax_ws_rs_javax_ws_rs_api",
@@ -2768,7 +2776,6 @@ java_library(
         "@maven//:xml_apis_xml_apis",
         "@maven//:xml_resolver_xml_resolver",
         "@maven//:xpp3_xpp3",
-        "@maven//:javax_javaee_api",
     ],
 )
 
