[techDebt]: [DEL-4166]: Remove dependency of 870-cg-orchestration from delegate jar

--- a/330-ci-beans/BUILD.bazel
+++ b/330-ci-beans/BUILD.bazel
@@ -7,6 +7,7 @@ shared_dependencies = [
     "//878-ng-common-utilities:module",
     "//879-pms-sdk:module",
     "//930-delegate-tasks:module",
+    "//950-ng-project-n-orgs:module",
     "//960-persistence:module",
     "//999-annotations:module",
     "//product/ci/engine/proto:ciengine_java_proto",
