--- a/platform-service/modules/resource-group-service/BUILD.bazel
+++ b/platform-service/modules/resource-group-service/BUILD.bazel
@@ -25,10 +25,12 @@ java_library(
         "//942-enforcement-sdk:module",
         "//945-account-mgmt:module",
         "//950-delegate-tasks-beans:module",
+        "//950-ng-project-n-orgs:module",
         "//953-events-api:module",
         "//954-connector-beans:module",
         "//954-pms-contracts:module",
         "//955-outbox-sdk:module",
+        "//958-migration-sdk:module",
         "//960-ng-core-beans:module",
         "//960-persistence:module",
         "//970-ng-commons:module",
