--- a/300-cv-nextgen/BUILD.bazel
+++ b/300-cv-nextgen/BUILD.bazel
@@ -23,6 +23,7 @@ shared_dependencies = [
     "//960-continuous-features:module",
     "//platform-service/modules/notification-service/contracts:module",
     "//960-persistence:module",
+    "//942-enforcement-sdk:module",
     "//965-api-key-filter:module",
     "//970-ng-commons:module",
     "//980-commons:module",
