[PL-15751]: make useSSL configureable for smtp for platform service

--- a/platform-service/config/config.yml
+++ b/platform-service/config/config.yml
@@ -95,7 +95,7 @@ notificationServiceConfig:
     host: host_placeholder
     port: 465
     fromAddress: noreply@harness.io
-    useSSL: true
+    useSSL:  ${SMTP_USE_SSL:-true}
     username: smtp_username_placeholder
     password: "smtp_password_placeholder"
 
