[CI-0]: Add jira-projects.txt to ignore list for TI

--- a/.ticonfig.yaml
+++ b/.ticonfig.yaml
@@ -1,6 +1,7 @@
 config:
   ignore:
     - "README.md"
+    - "jira-projects.txt"
     - ".ticonfig.yaml"
     - "jira-projects.txt"
     - "**/*.go"
