fix: [CI-4571]: check issue

--- a/310-ci-manager/ci-manager-config.yml
+++ b/310-ci-manager/ci-manager-config.yml
@@ -213,7 +213,7 @@ pmsGrpcClientConfig:
 
 apiUrl: https://localhost:8181/#/
 
-shouldConfigureWithPMS: false
+shouldConfigureWithPMS: true
 
 enableDashboardTimescale: false
 
