--- a/877-filestore/BUILD.bazel
+++ b/877-filestore/BUILD.bazel
@@ -22,24 +22,40 @@ java_library(
         "//clients/audit:module",
         "//access-control/contracts:module",
         "//clients/access-control/sdk:module",
+        "@maven//:com_esotericsoftware_kryo",
+
         "@maven//:com_fasterxml_jackson_core_jackson_annotations",
+        "@maven//:com_fasterxml_jackson_core_jackson_databind",
+        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
+
         "@maven//:com_google_code_findbugs_annotations",
         "@maven//:com_google_guava_guava",
         "@maven//:com_google_http_client_google_http_client",
         "@maven//:com_google_inject_guice",
+
         "@maven//:io_swagger_swagger_annotations",
         "@maven//:javax_validation_validation_api",
         "@maven//:javax_ws_rs_javax_ws_rs_api",
+        "@maven//:org_apache_commons_commons_lang3",
         "@maven//:org_hibernate_hibernate_validator",
+        "@maven//:org_jetbrains_annotations",
+
+        "@maven//:org_modelmapper_modelmapper",
+        "@maven//:org_mongodb_mongo_java_driver",
         "@maven//:org_mongodb_morphia_morphia",
+         "@maven//:org_mongodb_morphia_morphia_logging_slf4j",
+        "@maven//:org_reflections_reflections",
+
         "@maven//:org_springframework_data_spring_data_commons",
         "@maven//:org_springframework_data_spring_data_mongodb",
         "@maven//:org_springframework_spring_beans",
         "@maven//:org_springframework_spring_context",
         "@maven//:org_springframework_spring_core",
         "@maven//:org_springframework_spring_tx",
+
         "@maven//:net_jodah_expiringmap",
         "@maven//:net_jodah_failsafe",
+        "@maven//:org_slf4j_slf4j_api",
         "@maven//:io_dropwizard_dropwizard_configuration",
     ],
 )
@@ -72,7 +88,6 @@ java_library(
         "@maven//:junit_junit",
         "@maven//:org_assertj_assertj_core",
         "@maven//:org_mockito_mockito_core",
-        "@maven//:org_mongodb_morphia_morphia",
         "@maven//:org_slf4j_slf4j_api",
         "@maven//:org_springframework_data_spring_data_commons",
         "@maven//:org_springframework_spring_core",
