--- a/360-cg-manager/config.yml
+++ b/360-cg-manager/config.yml
@@ -705,3 +705,5 @@ ldapSyncJobConfig:
   defaultCronExpression: "0 0/15 * 1/1 * ? *"
 
 useGlobalKMSAsBaseAlgo: false
+
+enableDelegateTaskIterator: true
