--- a/dockerization/manager/Dockerfile-manager-jenkins-k8-openjdk
+++ b/dockerization/manager/Dockerfile-manager-jenkins-k8-openjdk
@@ -1,4 +1,4 @@
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276
+FROM harness/java-docker-base:smp_jdk11
 
 COPY --chown=65534:65534 alpn-boot-8.1.13.v20181017.jar /opt/harness/
 COPY --chown=65534:65534 keystore.jks /opt/harness/
