--- a/dockerization/template-service/Dockerfile-template-service-jenkins-k8-openjdk
+++ b/dockerization/template-service/Dockerfile-template-service-jenkins-k8-openjdk
@@ -1,4 +1,4 @@
-FROM us.gcr.io/platform-205701/alpine:safe-alpine3.15.4-bt1276
+FROM harness/java-docker-base:smp_jdk11
 
 COPY --chown=65534:65534 redisson-jcache.yaml /opt/harness/
 COPY --chown=65534:65534 config.yml /opt/harness/
