Adding new Managed role named Account Basic. Making this as default managed role at Account Scope and Account Basic as unmanaged.

--- a/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
+++ b/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
@@ -571,3 +571,12 @@ roles:
         - account
         - organization
         - project
+    - identifier: _account_basic
+      name: Account Basic
+      description: Account Basicd
+      permissions:
+        - core_account_view
+        - core_license_view
+      allowedScopeLevels:
+        - account
+      managed: true
