--- a/220-graphql-test/BUILD.bazel
+++ b/220-graphql-test/BUILD.bazel
@@ -33,6 +33,7 @@ java_library(
         "@maven//:de_flapdoodle_embed_de_flapdoodle_embed_mongo",
         "@maven//:junit_junit",
         "@maven//:org_assertj_assertj_core",
+        "@maven//:org_slf4j_slf4j_api",
     ],
 )
 
@@ -68,6 +69,7 @@ java_library(
         "@maven//:de_flapdoodle_embed_de_flapdoodle_embed_mongo",
         "@maven//:junit_junit",
         "@maven//:org_assertj_assertj_core",
+        "@maven//:org_slf4j_slf4j_api",
     ],
 )
 
