--- a/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
+++ b/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
@@ -498,7 +498,7 @@ roles:
         - chaos_chaoshub_view
       allowedScopeLevels:
         - account
-      managed: true
+      managed: false
     - identifier: _pipeline_executor
       name: Pipeline Executor
       description: Execute a pipeline
@@ -571,3 +571,12 @@ roles:
         - account
         - organization
         - project
+    - identifier: _account_basic
+        name: Account Basic
+        description: Account Basic
+        permissions:
+          - core_account_view
+          - core_license_view
+        managed: true
+        allowedScopeLevels:
+          - account
