Changed Account Viewer role back as Managed.

--- a/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
+++ b/access-control/service/src/main/resources/io/harness/accesscontrol/roles/managed-roles.yml
@@ -498,7 +498,7 @@ roles:
         - chaos_chaoshub_view
       allowedScopeLevels:
         - account
-      managed: false
+      managed: true
     - identifier: _pipeline_executor
       name: Pipeline Executor
       description: Execute a pipeline
