techdebt : [SPG-107]: fix jdk11 build on linux - add explicit jersey_guava deps

--- a/440-connector-nextgen/BUILD.bazel
+++ b/440-connector-nextgen/BUILD.bazel
@@ -80,6 +80,7 @@ java_library(
         "@maven//:org_springframework_spring_context",
         "@maven//:org_springframework_spring_core",
         "@maven//:org_springframework_spring_tx",
+        "@maven//:org_glassfish_jersey_bundles_repackaged_jersey_guava",
     ],
 )
 
