[PL-25591]: Adds implementation for OrganizationApi using interfaces generated from openapi

--- a/120-ng-manager/BUILD.bazel
+++ b/120-ng-manager/BUILD.bazel
@@ -41,6 +41,7 @@ shared_dependencies = [
     "//959-psql-database-models:module",
     "//960-watcher:module",
     "//965-api-key-filter:module",
+    "//120-ng-manager-server-spec:module",
     "//clients/access-control/admin-client:module",
     "//product/ci/scm/proto:ciscm_java_proto",
     "@maven//:net_rcarz_jira_client",
@@ -332,6 +333,7 @@ shared_dependencies = [
     "@maven//:io_github_resilience4j_resilience4j_retrofit",
     "@maven//:io_github_resilience4j_resilience4j_retry",
     "@maven//:io_gsonfire_gson_fire",
+#    "@maven//:io_harness_ng_manager_server_spec",
     "@maven//:io_jsonwebtoken_jjwt",
     "@maven//:io_kubernetes_client_java",
     "@maven//:io_kubernetes_client_java_api",
